refactor: bind policy scope to policy context hierarchy