@@ -15,12 +15,13 @@
 package org.eclipse.edc.policy.engine;
 
 import org.eclipse.edc.policy.engine.plan.PolicyEvaluationPlanner;
-import org.eclipse.edc.policy.engine.spi.AtomicConstraintFunction;
-import org.eclipse.edc.policy.engine.spi.DynamicAtomicConstraintFunction;
+import org.eclipse.edc.policy.engine.spi.AtomicConstraintRuleFunction;
+import org.eclipse.edc.policy.engine.spi.DynamicAtomicConstraintRuleFunction;
 import org.eclipse.edc.policy.engine.spi.PolicyContext;
 import org.eclipse.edc.policy.engine.spi.PolicyEngine;
 import org.eclipse.edc.policy.engine.spi.PolicyValidatorFunction;
-import org.eclipse.edc.policy.engine.spi.RuleFunction;
+import org.eclipse.edc.policy.engine.spi.PolicyValidatorRule;
+import org.eclipse.edc.policy.engine.spi.RulePolicyFunction;
 import org.eclipse.edc.policy.engine.spi.plan.PolicyEvaluationPlan;
 import org.eclipse.edc.policy.engine.validation.PolicyValidator;
 import org.eclipse.edc.policy.engine.validation.RuleValidator;
@@ -31,18 +32,17 @@ import org.eclipse.edc.policy.model.Permission;
 import org.eclipse.edc.policy.model.Policy;
 import org.eclipse.edc.policy.model.Prohibition;
 import org.eclipse.edc.policy.model.Rule;
+import org.eclipse.edc.spi.EdcException;
 import org.eclipse.edc.spi.result.Result;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.TreeMap;
 import java.util.function.BiFunction;
+import java.util.function.Predicate;
 
-import static java.util.stream.Collectors.toList;
 import static org.eclipse.edc.spi.result.Result.failure;
 import static org.eclipse.edc.spi.result.Result.success;
 
@@ -53,13 +53,15 @@ public class PolicyEngineImpl implements PolicyEngine {
 
     public static final String ALL_SCOPES_DELIMITED = ALL_SCOPES + DELIMITER;
 
-    private final Map<String, List<ConstraintFunctionEntry<Rule>>> constraintFunctions = new TreeMap<>();
+    private final Map<String, Class<? extends PolicyContext>> scopes = new HashMap<>();
 
-    private final List<DynamicConstraintFunctionEntry<Rule>> dynamicConstraintFunctions = new ArrayList<>();
+    private final List<ConstraintFunctionEntry<Rule, ? extends PolicyContext>> constraintFunctions = new ArrayList<>();
+    private final List<DynamicConstraintFunctionEntry<Rule, ? extends PolicyContext>> dynamicConstraintFunctions = new ArrayList<>();
+    private final List<RuleFunctionEntry<Rule, ? extends PolicyContext>> ruleFunctions = new ArrayList<>();
 
-    private final Map<String, List<RuleFunctionEntry<Rule>>> ruleFunctions = new TreeMap<>();
-    private final Map<String, List<PolicyValidatorFunction>> preValidators = new HashMap<>();
-    private final Map<String, List<PolicyValidatorFunction>> postValidators = new HashMap<>();
+    private final List<ValidatorRuleEntry<? extends PolicyContext>> preValidators = new ArrayList<>();
+    private final List<ValidatorRuleEntry<? extends PolicyContext>> postValidators = new ArrayList<>();
+
     private final ScopeFilter scopeFilter;
     private final RuleValidator ruleValidator;
 
@@ -78,66 +80,88 @@ public class PolicyEngineImpl implements PolicyEngine {
     }
 
     @Override
-    public Result<Void> evaluate(String scope, Policy policy, PolicyContext context) {
-        var delimitedScope = scope + ".";
+    public <C extends PolicyContext> Result<Void> evaluate(Policy policy, C context) {
+        Predicate<FunctionEntry<?>> isScoped = entry -> entry.contextType().isAssignableFrom(context.getClass());
 
-        var scopedPreValidators = preValidators.entrySet().stream().filter(entry -> scopeFilter(entry.getKey(), delimitedScope)).flatMap(l -> l.getValue().stream()).toList();
-        for (var validator : scopedPreValidators) {
-            if (!validator.apply(policy, context)) {
-                return failValidator("Pre-validator", validator, context);
-            }
+        var preValidationFailure = preValidators.stream()
+                .filter(isScoped)
+                .map(it -> (PolicyValidatorRule<C>) it.rule())
+                .filter(it -> !it.apply(policy, context))
+                .findFirst();
+
+        if (preValidationFailure.isPresent()) {
+            return failValidator("Pre-validator", preValidationFailure.get(), context);
         }
 
         var evalBuilder = PolicyEvaluator.Builder.newInstance();
 
-        ruleFunctions.entrySet().stream().filter(entry -> scopeFilter(entry.getKey(), delimitedScope)).flatMap(entry -> entry.getValue().stream()).forEach(entry -> {
-            if (Duty.class.isAssignableFrom(entry.type)) {
-                evalBuilder.dutyRuleFunction((rule) -> entry.function.evaluate(rule, context));
-            } else if (Permission.class.isAssignableFrom(entry.type)) {
-                evalBuilder.permissionRuleFunction((rule) -> entry.function.evaluate(rule, context));
-            } else if (Prohibition.class.isAssignableFrom(entry.type)) {
-                evalBuilder.prohibitionRuleFunction((rule) -> entry.function.evaluate(rule, context));
-            }
-        });
 
-        constraintFunctions.entrySet().stream().filter(entry -> scopeFilter(entry.getKey(), delimitedScope)).flatMap(entry -> entry.getValue().stream()).forEach(entry -> {
-            if (Duty.class.isAssignableFrom(entry.type)) {
-                evalBuilder.dutyFunction(entry.key, (operator, value, duty) -> entry.function.evaluate(operator, value, duty, context));
-            } else if (Permission.class.isAssignableFrom(entry.type)) {
-                evalBuilder.permissionFunction(entry.key, (operator, value, permission) -> entry.function.evaluate(operator, value, permission, context));
-            } else if (Prohibition.class.isAssignableFrom(entry.type)) {
-                evalBuilder.prohibitionFunction(entry.key, (operator, value, prohibition) -> entry.function.evaluate(operator, value, prohibition, context));
-            }
-        });
+        ruleFunctions.stream()
+                .filter(isScoped)
+                .forEach(entry -> {
+                    if (Duty.class.isAssignableFrom(entry.type)) {
+                        evalBuilder.dutyRuleFunction((rule) ->
+                                ((RulePolicyFunction<Rule, C>) entry.function).evaluate(rule, context));
+                    } else if (Permission.class.isAssignableFrom(entry.type)) {
+                        evalBuilder.permissionRuleFunction((rule) ->
+                                ((RulePolicyFunction<Rule, C>) entry.function).evaluate(rule, context));
+                    } else if (Prohibition.class.isAssignableFrom(entry.type)) {
+                        evalBuilder.prohibitionRuleFunction((rule) ->
+                                ((RulePolicyFunction<Rule, C>) entry.function).evaluate(rule, context));
+                    }
+                });
 
-        dynamicConstraintFunctions.stream().filter(entry -> scopeFilter(entry.scope, delimitedScope)).forEach(entry -> {
-            if (Duty.class.isAssignableFrom(entry.type)) {
-                evalBuilder.dynamicDutyFunction(entry.function::canHandle, (key, operator, value, duty) -> entry.function.evaluate(key, operator, value, duty, context));
-            } else if (Permission.class.isAssignableFrom(entry.type)) {
-                evalBuilder.dynamicPermissionFunction(entry.function::canHandle, (key, operator, value, permission) -> entry.function.evaluate(key, operator, value, permission, context));
-            } else if (Prohibition.class.isAssignableFrom(entry.type)) {
-                evalBuilder.dynamicProhibitionFunction(entry.function::canHandle, (key, operator, value, prohibition) -> entry.function.evaluate(key, operator, value, prohibition, context));
-            }
-        });
+        constraintFunctions.stream()
+                .filter(isScoped)
+                .forEach(entry -> {
+                    if (Duty.class.isAssignableFrom(entry.type)) {
+                        evalBuilder.dutyFunction(entry.key, (operator, value, duty) ->
+                                ((AtomicConstraintRuleFunction<Rule, C>) entry.function).evaluate(operator, value, duty, context));
+                    } else if (Permission.class.isAssignableFrom(entry.type)) {
+                        evalBuilder.permissionFunction(entry.key, (operator, value, permission) ->
+                                ((AtomicConstraintRuleFunction<Rule, C>) entry.function).evaluate(operator, value, permission, context));
+                    } else if (Prohibition.class.isAssignableFrom(entry.type)) {
+                        evalBuilder.prohibitionFunction(entry.key, (operator, value, prohibition) ->
+                                ((AtomicConstraintRuleFunction<Rule, C>) entry.function).evaluate(operator, value, prohibition, context));
+                    }
+                });
+
+        dynamicConstraintFunctions.stream()
+                .filter(isScoped)
+                .forEach(entry -> {
+                    if (Duty.class.isAssignableFrom(entry.type)) {
+                        evalBuilder.dynamicDutyFunction(entry.function::canHandle, (key, operator, value, duty) ->
+                                ((DynamicAtomicConstraintRuleFunction<Rule, C>) entry.function).evaluate(key, operator, value, duty, context));
+                    } else if (Permission.class.isAssignableFrom(entry.type)) {
+                        evalBuilder.dynamicPermissionFunction(entry.function::canHandle, (key, operator, value, permission) ->
+                                ((DynamicAtomicConstraintRuleFunction<Rule, C>) entry.function).evaluate(key, operator, value, permission, context));
+                    } else if (Prohibition.class.isAssignableFrom(entry.type)) {
+                        evalBuilder.dynamicProhibitionFunction(entry.function::canHandle, (key, operator, value, prohibition) ->
+                                ((DynamicAtomicConstraintRuleFunction<Rule, C>) entry.function).evaluate(key, operator, value, prohibition, context));
+                    }
+                });
 
         var evaluator = evalBuilder.build();
 
-        var filteredPolicy = scopeFilter.applyScope(policy, scope);
+        var filteredPolicy = scopeFilter.applyScope(policy, context.scope());
 
         var result = evaluator.evaluate(filteredPolicy);
 
         if (result.valid()) {
 
-            var scopedPostValidators = postValidators.entrySet().stream().filter(entry -> scopeFilter(entry.getKey(), delimitedScope)).flatMap(l -> l.getValue().stream()).toList();
-            for (var validator : scopedPostValidators) {
-                if (!validator.apply(policy, context)) {
-                    return failValidator("Post-validator", validator, context);
-                }
+            var postValidationFailure = postValidators.stream()
+                    .filter(isScoped)
+                    .map(it -> (PolicyValidatorRule<C>) it.rule())
+                    .filter(it -> !it.apply(policy, context))
+                    .findFirst();
+
+            if (postValidationFailure.isPresent()) {
+                return failValidator("Post-validator", postValidationFailure.get(), context);
             }
 
             return success();
         } else {
-            return failure(result.getProblems().stream().map(RuleProblem::getDescription).collect(toList()));
+            return failure("Policy in scope %s not fulfilled: %s".formatted(context.scope(), result.getProblems().stream().map(RuleProblem::getDescription).toList()));
         }
     }
 
@@ -146,10 +170,7 @@ public class PolicyEngineImpl implements PolicyEngine {
         var validatorBuilder = PolicyValidator.Builder.newInstance()
                 .ruleValidator(ruleValidator);
 
-        constraintFunctions.values().stream()
-                .flatMap(Collection::stream)
-                .forEach(entry -> validatorBuilder.evaluationFunction(entry.key, entry.type, entry.function));
-
+        constraintFunctions.forEach(entry -> validatorBuilder.evaluationFunction(entry.key, entry.type, entry.function));
         dynamicConstraintFunctions.forEach(entry -> validatorBuilder.dynamicEvaluationFunction(entry.type, entry.function));
 
         return validatorBuilder.build().validate(policy);
@@ -158,100 +179,130 @@ public class PolicyEngineImpl implements PolicyEngine {
     @Override
     public PolicyEvaluationPlan createEvaluationPlan(String scope, Policy policy) {
         var planner = PolicyEvaluationPlanner.Builder.newInstance(scope).ruleValidator(ruleValidator);
+        Predicate<FunctionEntry<?>> isScoped = entry -> entry.contextType().isAssignableFrom(contextType(scope));
 
-        preValidators.forEach(planner::preValidators);
-        postValidators.forEach(planner::postValidators);
+        preValidators.stream().filter(isScoped).map(ValidatorRuleEntry::rule)
+                .forEach(planner::preValidator);
+        postValidators.stream().filter(isScoped).map(ValidatorRuleEntry::rule)
+                .forEach(planner::postValidator);
 
-        constraintFunctions.forEach((functionScope, entry) -> entry.forEach(constraintEntry -> {
-            planner.evaluationFunction(functionScope, constraintEntry.key, constraintEntry.type, constraintEntry.function);
-        }));
-
-        dynamicConstraintFunctions.forEach(dynFunctions ->
-                planner.evaluationFunction(dynFunctions.scope, dynFunctions.type, dynFunctions.function)
-        );
-
-        ruleFunctions.forEach((functionScope, entry) -> entry.forEach(functionEntry -> {
-            planner.evaluationFunction(functionScope, functionEntry.type, functionEntry.function);
-        }));
+        constraintFunctions.stream().filter(isScoped)
+                .forEach(entry -> planner.evaluationFunction(entry.key, entry.type, entry.function));
+        dynamicConstraintFunctions.stream().filter(isScoped)
+                .forEach(entry -> planner.evaluationFunction(entry.type, entry.function));
+        ruleFunctions.stream().filter(isScoped)
+                .forEach(entry -> planner.evaluationFunction(entry.type, entry.function));
 
         return policy.accept(planner.build());
     }
 
     @Override
-    @SuppressWarnings({ "unchecked", "rawtypes" })
-    public <R extends Rule> void registerFunction(String scope, Class<R> type, String key, AtomicConstraintFunction<R> function) {
-        constraintFunctions.computeIfAbsent(scope + ".", k -> new ArrayList<>()).add(new ConstraintFunctionEntry(type, key, function));
+    public <C extends PolicyContext> void registerScope(String scope, Class<C> contextType) {
+        scopes.put(scope, contextType);
+    }
+
+    @Override
+    public <R extends Rule, C extends PolicyContext> void registerFunction(Class<C> contextType, Class<R> type, String key, AtomicConstraintRuleFunction<R, C> function) {
+        constraintFunctions.add(new ConstraintFunctionEntry(contextType, type, key, function));
     }
 
     @Override
     @SuppressWarnings({ "unchecked", "rawtypes" })
-    public <R extends Rule> void registerFunction(String scope, Class<R> type, DynamicAtomicConstraintFunction<R> function) {
-        dynamicConstraintFunctions.add(new DynamicConstraintFunctionEntry(type, scope + DELIMITER, function));
+    public <R extends Rule, C extends PolicyContext> void registerFunction(String scope, Class<R> type, String key, AtomicConstraintRuleFunction<R, C> function) {
+        constraintFunctions.add(new ConstraintFunctionEntry(contextType(scope), type, key, function));
+    }
+
+    @Override
+    public <R extends Rule, C extends PolicyContext> void registerFunction(Class<C> contextType, Class<R> type, DynamicAtomicConstraintRuleFunction<R, C> function) {
+        dynamicConstraintFunctions.add(new DynamicConstraintFunctionEntry(contextType, type, function));
     }
 
     @Override
     @SuppressWarnings({ "unchecked", "rawtypes" })
-    public <R extends Rule> void registerFunction(String scope, Class<R> type, RuleFunction<R> function) {
-        ruleFunctions.computeIfAbsent(scope + ".", k -> new ArrayList<>()).add(new RuleFunctionEntry(type, function));
+    public <R extends Rule, C extends PolicyContext> void registerFunction(String scope, Class<R> type, DynamicAtomicConstraintRuleFunction<R, C> function) {
+        dynamicConstraintFunctions.add(new DynamicConstraintFunctionEntry(contextType(scope), type, function));
+    }
+
+    @Override
+    public <R extends Rule, C extends PolicyContext> void registerFunction(Class<C> contextType, Class<R> type, RulePolicyFunction<R, C> function) {
+        ruleFunctions.add(new RuleFunctionEntry(contextType, type, function));
+    }
+
+    @Override
+    @SuppressWarnings({ "unchecked", "rawtypes" })
+    public <R extends Rule, C extends PolicyContext> void registerFunction(String scope, Class<R> type, RulePolicyFunction<R, C> function) {
+        ruleFunctions.add(new RuleFunctionEntry(contextType(scope), type, function));
+    }
+
+    @Override
+    public <C extends PolicyContext> void registerPreValidator(Class<C> contextType, PolicyValidatorRule<C> validator) {
+        preValidators.add(new ValidatorRuleEntry(contextType, validator));
+    }
+
+    @Override
+    public <C extends PolicyContext> void registerPostValidator(Class<C> contextType, PolicyValidatorRule<C> validator) {
+        postValidators.add(new ValidatorRuleEntry(contextType, validator));
     }
 
     @Override
     public void registerPreValidator(String scope, BiFunction<Policy, PolicyContext, Boolean> validator) {
-        registerPreValidator(scope, new PolicyValidatorFunctionWrapper(validator));
+        registerPreValidator(PolicyContext.class, new PolicyValidatorFunctionWrapper(validator));
     }
 
     @Override
     public void registerPreValidator(String scope, PolicyValidatorFunction validator) {
-        preValidators.computeIfAbsent(scope + DELIMITER, k -> new ArrayList<>()).add(validator);
+        registerPreValidator(PolicyContext.class, validator);
     }
 
     @Override
     public void registerPostValidator(String scope, BiFunction<Policy, PolicyContext, Boolean> validator) {
-        registerPostValidator(scope, new PolicyValidatorFunctionWrapper(validator));
+        registerPostValidator(PolicyContext.class, new PolicyValidatorFunctionWrapper(validator));
     }
 
     @Override
     public void registerPostValidator(String scope, PolicyValidatorFunction validator) {
-        postValidators.computeIfAbsent(scope + DELIMITER, k -> new ArrayList<>()).add(validator);
+        registerPostValidator(PolicyContext.class, validator);
     }
 
     @NotNull
-    private Result<Void> failValidator(String type, PolicyValidatorFunction validator, PolicyContext context) {
-        return failure(context.hasProblems() ? context.getProblems() : List.of(type + " failed: " + validator.getClass().getName()));
+    private Result<Void> failValidator(String type, PolicyValidatorRule<?> validator, PolicyContext context) {
+        return failure(context.hasProblems() ? context.getProblems() : List.of(type + " failed: " + validator.name()));
     }
 
-    private static class ConstraintFunctionEntry<R extends Rule> {
-        Class<R> type;
-        String key;
-        AtomicConstraintFunction<R> function;
+    private record ConstraintFunctionEntry<R extends Rule, C extends PolicyContext>(
+            Class<C> contextType,
+            Class<R> type,
+            String key,
+            AtomicConstraintRuleFunction<R, C> function
+    ) implements FunctionEntry<C>  { }
 
-        ConstraintFunctionEntry(Class<R> type, String key, AtomicConstraintFunction<R> function) {
-            this.type = type;
-            this.key = key;
-            this.function = function;
-        }
+    private record DynamicConstraintFunctionEntry<R extends Rule, C extends PolicyContext>(
+            Class<C> contextType,
+            Class<R> type,
+            DynamicAtomicConstraintRuleFunction<R, C> function
+    ) implements FunctionEntry<C>  { }
+
+    private record RuleFunctionEntry<R extends Rule, C extends PolicyContext>(
+            Class<C> contextType,
+            Class<R> type,
+            RulePolicyFunction<R, C> function
+    ) implements FunctionEntry<C>  { }
+
+    private record ValidatorRuleEntry<C extends PolicyContext>(
+            Class<C> contextType,
+            PolicyValidatorRule<C> rule
+    ) implements FunctionEntry<C> { }
+
+    private interface FunctionEntry<C extends PolicyContext> {
+        Class<C> contextType();
     }
 
-    private static class DynamicConstraintFunctionEntry<R extends Rule> {
-        Class<R> type;
-        String scope;
-        DynamicAtomicConstraintFunction<R> function;
-
-        DynamicConstraintFunctionEntry(Class<R> type, String scope, DynamicAtomicConstraintFunction<R> function) {
-            this.type = type;
-            this.scope = scope;
-            this.function = function;
+    private @NotNull Class<? extends PolicyContext> contextType(String scope) {
+        var contextType = scopes.get(scope);
+        if (contextType == null) {
+            throw new EdcException("Scope %s not registered".formatted(scope));
         }
-    }
-
-    private static class RuleFunctionEntry<R extends Rule> {
-        Class<R> type;
-        RuleFunction<R> function;
-
-        RuleFunctionEntry(Class<R> type, RuleFunction<R> function) {
-            this.type = type;
-            this.function = function;
-        }
+        return contextType;
     }
 
     private record PolicyValidatorFunctionWrapper(
